<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.11">
  <POU Name="OP130_RH_Auto" Id="{138b6147-db5d-4c5c-b33a-8824439fc3cd}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM OP130_RH_Auto
VAR
	OP130_Torque_Monitor_Dly: TON;
	OP130_Torque_Monitor_Dly_RH: TON;
	Temp2:BOOL;
	actual_torque:LREAL;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[CASE OP130_RH_AutoSeq OF
	10: IF (OP130_Prev_RH_COMP_OK= TRUE) AND OP130_StartEnable THEN 
		OP130_RH_AutoSeq:=20;
		END_IF
		IF (OP130_Prev_RH_COMP_NOK= TRUE) THEN 
			OP130_RH_AutoSeq:=180;
		END_IF
	
	20:IF  OP130_StartEnable THEN	
		OP130_RH_AutoSeq:=30;
	   END_IF
	   
	30:IF (OP130_GVL.SR130_RH_Servo_Control.Axis_Enabled=TRUE OR OP130_Dry_Run) AND OP130_StartEnable THEN
		OP130_RH_AutoSeq:=40;
		END_IF
		
	40:IF  OP130_StartEnable THEN
		OP130_RH_AutoSeq:=50;
		END_IF
		
	50:IF (OP130_StartEnable) THEN 
		//OP130_GVL.SR130_RH_Vert_Servo.fTargetPosition:=SR130_HMI_Servo_Work_Position;
		//OP130_GVL.SR130_RH_Vert_Servo.fTargetVelocity:=SR130_HMI_Servo_Work_Velocity;
		SR130_RH_Servo_Control.Position :=SR130_HMI_Servo_Work_Position;
		SR130_RH_Servo_Control.Velocity :=SR130_HMI_Servo_Work_Velocity;
		OP130_RH_AutoSeq:=60;
		END_IF
		
	60:IF(OP130_StartEnable) THEN 
		//SR130_RH_Abs_Move_Start:=TRUE;
		SR130_RH_Servo_Control.ABSmove_Start:=TRUE;
		OP130_RH_AutoSeq:=70;
		END_IF
		
	70:IF(OP130_StartEnable)AND OP130_GVL.SR130_RH_Servo_Control.Axis_In_Pos THEN 
		//SR130_RH_Abs_Move_Start:=FALSE;
		SR130_RH_Servo_Control.ABSmove_Start:=FALSE;
		OP130_RH_AutoSeq:=90;
		END_IF
	
	90:IF (OP130_StartEnable) THEN
		//OP130_GVL.SR130_RH_Vert_Servo.fTargetPosition:=SR130_HMI_Servo_Lock_Position;
		//OP130_GVL.SR130_RH_Vert_Servo.fTargetVelocity:=SR130_HMI_Servo_Lock_Velocity;
		 SR130_RH_Servo_Control.Position :=SR130_HMI_Servo_Lock_Position;
		 SR130_RH_Servo_Control.Velocity :=SR130_HMI_Servo_Lock_Velocity;
		 OP130_RH_AutoSeq:=100;
		 END_IF
		 
	100:IF (OP130_StartEnable) THEN
		//SR130_RH_Abs_Move_Start:=TRUE;
		SR130_RH_Servo_Control.ABSmove_Start:=TRUE;
		 OP130_RH_AutoSeq:=110;
		END_IF
		
    110:IF OP130_StartEnable  THEN		//Check Servo In Target Pos
		IF SR130_RH_Servo_Control.Axis_In_Pos AND SR130_RH_Servo_Control.Actual_Torque < OP130_HMI_Pull_Torque_Limit THEN
			actual_torque :=SR130_RH_Servo_Control.Actual_Torque;
			SR130_RH_Vert_Servo.bHalt:=TRUE;
			OP130_RH_Comp_OK:=TRUE;
			OP130_RH_Comp_NOK:= FALSE;
		//SR130_RH_Abs_Move_Start:=FALSE;
		SR130_RH_Servo_Control.ABSmove_Start:=FALSE;
		END_IF
		IF SR130_RH_Servo_Control.Axis_In_Pos AND SR130_RH_Servo_Control.Actual_Torque > OP130_HMI_Pull_Torque_Limit THEN
			OP130_RH_Comp_NOK:=TRUE;
			OP130_RH_Comp_OK:= FALSE;
			//SR130_RH_Abs_Move_Start:=FALSE;
			SR130_RH_Servo_Control.ABSmove_Start:=FALSE;
		END_IF
	 IF SR130_RH_Servo_Control.Axis_Halted OR SR130_RH_Servo_Control.Axis_In_Pos AND (OP130_RH_Comp_OK OR OP130_RH_Comp_NOK) THEN
	//SR130_RH_Abs_Move_Start:=FALSE;
	    SR130_RH_Servo_Control.ABSmove_Start:=FALSE;
        OP130_RH_AutoSeq:=180;
		END_IF
		END_IF
	
		

	
	180:IF (OP130_StartEnable) THEN   // Move Work Pos Values to Servo
		//OP130_GVL.SR130_RH_Vert_Servo.fTargetPosition:=SR130_HMI_Servo_CylWork_Position;
		//OP130_GVL.SR130_RH_Vert_Servo.fTargetVelocity:=SR130_HMI_Servo_CylWork_Velocity;
		    SR130_RH_Servo_Control.Position :=SR130_HMI_Servo_CylWork_Position;
		    SR130_RH_Servo_Control.Velocity :=SR130_HMI_Servo_CylWork_Velocity;
		    SR130_RH_Vert_Servo.bHalt:=FALSE;
		    MOVER_CMP_STATUS[OP130_STN_MOVER][2]:=130;
            OP130_RH_AutoSeq:=190;
	   END_IF
	   
	 190: IF(OP130_StartEnable) THEN		//move Cmd to Servo
		// SR130_RH_Abs_Move_Start:= TRUE;
		 SR130_RH_Servo_Control.ABSmove_Start:= TRUE;
		 OP130_RH_AutoSeq:=200;
	 END_IF
	 
	200:IF (OP130_StartEnable) AND OP130_GVL.SR130_RH_Servo_Control.Axis_In_Pos THEN		//Check Servo In Target Pos
	       //SR130_RH_Abs_Move_Start:= FALSE;	
	       SR130_RH_Servo_Control.ABSmove_Start:= FALSE;
           OP130_RH_AutoSeq:=210;
	    END_IF
		
	210:IF  (OP130_StartEnable) THEN		//Move Rotary Cyl to Zero Deg
		OP130_GVL.CR130_RH_Rot_Cyl.AutoCmd2:=TRUE;
		  OP130_GVL.CR130_RH_Rot_Cyl.AutoCmd1:=FALSE;
		  IF (OP130_GVL.CR130_RH_Rot_Cyl.Position2=TRUE) THEN
			  OP130_RH_AutoSeq:=220;
			  END_IF
	END_IF
	
	220: IF  (OP130_StartEnable) THEN		//move Home Pos to Servo
		//OP130_GVL.SR130_RH_Vert_Servo.fTargetPosition:=SR130_HMI_Servo_Rotation_Position;
		//OP130_GVL.SR130_RH_Vert_Servo.fTargetVelocity:=SR130_HMI_Servo_Rotation_Velocity;
		      SR130_RH_Servo_Control.Position:=SR130_HMI_Servo_Rotation_Position;
		      SR130_RH_Servo_Control.Velocity:=SR130_HMI_Servo_Rotation_Velocity;
		      OP130_RH_AutoSeq:=230;
	     END_IF
	
	230: IF (OP130_StartEnable) THEN 		//Move Cmd TO Servo
		//SR130_RH_Abs_Move_Start:= TRUE ;
		SR130_RH_Servo_Control.ABSmove_Start:= TRUE ;
		 OP130_RH_AutoSeq:=240;
	     END_IF
	
	240: IF (OP130_StartEnable) AND OP130_GVL.SR130_RH_Servo_Control.Axis_In_Pos THEN 	//Check Servo In Target Pos
		// SR130_RH_Abs_Move_Start:= FALSE ;
		 SR130_RH_Servo_Control.ABSmove_Start:= FALSE ;
			OP130_RH_AutoSeq:=250;
	      END_IF
		  
	250:IF (OP130_StartEnable) THEN		//Move Rotary Cyl to Zero Deg
		   OP130_GVL.CR130_RH_Rot_Cyl.AutoCmd1:=TRUE;
		  OP130_GVL.CR130_RH_Rot_Cyl.AutoCmd2:=FALSE;
		  IF (OP130_GVL.CR130_RH_Rot_Cyl.Position1=TRUE) THEN
			  OP130_RH_AutoSeq:=260;
		  END_IF
	    END_IF
		
	260: IF  (OP130_StartEnable) THEN		//move Home Pos to Servo
		//OP130_GVL.SR130_RH_Vert_Servo.fTargetPosition:=SR130_Servo_Home_Position;
		//OP130_GVL.SR130_RH_Vert_Servo.fTargetVelocity:=SR130_Servo_Home_Velocity;
		     SR130_RH_Servo_Control.Position:=SR130_Servo_Home_Position;
		     SR130_RH_Servo_Control.Velocity:=SR130_Servo_Home_Velocity;
		     OP130_RH_AutoSeq:=270;
	     END_IF
		 
	270: IF (OP130_StartEnable) THEN 		//Move Cmd TO Servo
		//SR130_RH_Abs_Move_Start:= TRUE ;
		SR130_RH_Servo_Control.ABSmove_Start:= TRUE ;
		 OP130_RH_AutoSeq:=280;
	     END_IF
	
	280: IF (OP130_StartEnable) AND OP130_GVL.SR130_RH_Servo_Control.Axis_In_Pos THEN 	//Check Servo In Target Pos
		// SR130_RH_Abs_Move_Start:= FALSE ;
		 SR130_RH_Servo_Control.ABSmove_Start:= FALSE ;
			OP130_RH_AutoSeq:=290;
	     END_IF
		 
	 290:IF (OP130_StartEnable) THEN		//LH Operation completed
		    OP130_RH_Operation_Completed:= TRUE;
		    OP130_RH_AutoSeq:=300;
	     END_IF

	   
END_CASE
//Torque Monitor Dly
 OP130_Torque_Monitor_Dly_RH(IN:=OP130_RH_AutoSeq=170 , PT:=T#200MS , Q=> , ET=> );
 ]]></ST>
    </Implementation>
    <LineIds Name="OP130_RH_Auto">
      <LineId Id="3" Count="10" />
      <LineId Id="175" Count="0" />
      <LineId Id="14" Count="2" />
      <LineId Id="176" Count="0" />
      <LineId Id="17" Count="2" />
      <LineId Id="177" Count="0" />
      <LineId Id="20" Count="2" />
      <LineId Id="155" Count="1" />
      <LineId Id="23" Count="4" />
      <LineId Id="192" Count="0" />
      <LineId Id="28" Count="1" />
      <LineId Id="178" Count="0" />
      <LineId Id="30" Count="1" />
      <LineId Id="193" Count="0" />
      <LineId Id="32" Count="6" />
      <LineId Id="157" Count="0" />
      <LineId Id="39" Count="1" />
      <LineId Id="179" Count="0" />
      <LineId Id="41" Count="0" />
      <LineId Id="43" Count="0" />
      <LineId Id="166" Count="0" />
      <LineId Id="44" Count="1" />
      <LineId Id="180" Count="0" />
      <LineId Id="46" Count="1" />
      <LineId Id="147" Count="0" />
      <LineId Id="48" Count="3" />
      <LineId Id="190" Count="0" />
      <LineId Id="52" Count="4" />
      <LineId Id="167" Count="0" />
      <LineId Id="57" Count="2" />
      <LineId Id="168" Count="0" />
      <LineId Id="60" Count="9" />
      <LineId Id="160" Count="1" />
      <LineId Id="70" Count="0" />
      <LineId Id="139" Count="0" />
      <LineId Id="71" Count="1" />
      <LineId Id="181" Count="0" />
      <LineId Id="73" Count="1" />
      <LineId Id="169" Count="0" />
      <LineId Id="75" Count="1" />
      <LineId Id="182" Count="0" />
      <LineId Id="77" Count="1" />
      <LineId Id="170" Count="0" />
      <LineId Id="79" Count="1" />
      <LineId Id="183" Count="0" />
      <LineId Id="81" Count="6" />
      <LineId Id="185" Count="0" />
      <LineId Id="88" Count="2" />
      <LineId Id="162" Count="1" />
      <LineId Id="91" Count="1" />
      <LineId Id="184" Count="0" />
      <LineId Id="93" Count="1" />
      <LineId Id="171" Count="0" />
      <LineId Id="95" Count="4" />
      <LineId Id="172" Count="0" />
      <LineId Id="100" Count="1" />
      <LineId Id="186" Count="0" />
      <LineId Id="102" Count="6" />
      <LineId Id="187" Count="0" />
      <LineId Id="109" Count="2" />
      <LineId Id="164" Count="1" />
      <LineId Id="112" Count="1" />
      <LineId Id="188" Count="0" />
      <LineId Id="114" Count="1" />
      <LineId Id="173" Count="0" />
      <LineId Id="116" Count="4" />
      <LineId Id="174" Count="0" />
      <LineId Id="121" Count="1" />
      <LineId Id="189" Count="0" />
      <LineId Id="123" Count="8" />
      <LineId Id="2" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>